<resources>
    <string name="app_name">MyUnityLib</string>
    <string name="photo_num">(%1$d)</string>

    <string name="photo_folder_select">选择相册</string>
    <string name="publish_select_photo_max">您最多只能选%1$d张图片</string>
    <string name="publish_select_photo">已达图片上限</string>
    <string name="photo_select">选择图片</string>
    <string name="photo_ok">确定(%1$d)</string>
    <string name="photo_ok_finish">完成(%1$d</string>
    <string name="photo_preview">预览</string>
    <string name="photo_no_select">您还没选择照片</string>
    <string name="select_ok">确认</string>
    <string name="photo_to_choose">选择</string>
    <string name="select_photo_error">图片选择失败</string>
    <string name="preview_image_failure">图片加载失败</string>
    <string name="preview_image_forwarding">转发</string>
    <string name="preview_image_save">保存相册</string>
    <string name="preview_image_cancel">取消</string>
    <string name="photo_finish">完成</string>

    <string name="album_name_all">全部</string>

    <string name="button_preview">预览</string>
    <string name="button_apply_default">使用</string>
    <string name="button_apply">使用(%1$d)</string>
    <string name="button_back">返回</string>
    <string name="photo_grid_capture">拍一张</string>
    <string name="empty_text">还没有图片或视频</string>
    <string name="button_ok">我知道了</string>

    <string name="error_over_count_default">您已经达到最大选择数量</string>
    <string name="error_over_count">最多只能选择 %1$d 个文件</string>
    <string name="error_under_quality">图片质量太低</string>
    <string name="error_over_quality">图片质量太高</string>
    <string name="error_file_type">不支持的文件类型</string>
    <string name="error_type_conflict">不能同时选择图片和视频</string>
    <string name="error_no_video_activity">没有支持视频预览的应用</string>

    <string name="button_original">原图</string>
    <string name="error_over_original_size">"该照片大于 %1$d M，无法上传将取消勾选原图"</string>
    <string name="error_over_original_count">"有 %1$d 张照片大于 %2$d M\n无法上传，将取消勾选原图"</string>
    <string name="button_sure_default">确定</string>
    <string name="button_sure">确定(%1$d)</string>
</resources>
