<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preview_background_color"
    android:orientation="vertical" >

    <com.photo.selectlib.utils.TitleView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:title_text_color="@android:color/white"
        app:title_text_size="20sp"
        android:background="@color/clip_image_title_bg"
        app:left_image="@drawable/btn_back"
        app:right_text="确定"
        app:right_text_drawable_right="@drawable/shape_light_nomal_bg"
        app:title_name="@string/photo_select" />

    <RelativeLayout
        android:paddingLeft="60px"
        android:paddingRight="60px"
        android:background="@color/clip_image_title_bg"
        android:id="@+id/tv_photo_title"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <ImageView
            android:id="@+id/iv_select_back"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_back"
            android:layout_width="12dp"
            android:layout_height="22dp"/>

        <TextView
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/photo_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_select_finish"
            android:textStyle="bold"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="13sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/album_finish"
            android:text="@string/photo_finish"
            android:background="@drawable/shape_light_red_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv_photo_folder"
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_photo_title"
        android:scrollbars="none"
        android:layout_height="match_parent" />

    <!-- 下方确定按钮 -->

    <RelativeLayout
        android:id="@+id/ll_photo_operation"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:background="@color/view_white_bg" >

        <TextView
            android:id="@+id/tv_photo_scan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:gravity="center"
            android:clickable="true"
            android:textSize="15sp"
            android:textColor="@color/preview_bottom_toolbar_bg"
            android:text="@string/photo_preview" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_photo_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:clickable="true"
            android:layout_margin="3dp"
            android:padding="5dp"
            android:background="@drawable/shape_light_nomal_bg"
            android:text="@string/photo_ok" />

        <CheckBox
            android:id="@+id/rb_original_image"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_original"
            android:button="@null"
            android:textSize="15sp"
            android:checked="false"
            android:drawableLeft="@drawable/selector_radio"
            android:drawablePadding="10dp"/>

    </RelativeLayout>

</RelativeLayout>